added bootstrap colum styling to hour blocks, also added extra feature buttons, plan to have them go invisible with a separate button at the top

--- a/index.html
+++ b/index.html
@@ -25,75 +25,75 @@
 
     <!-- Timeblocks go here -->
     <div id="hour-9am" class="oneHourSection">
-      <h2 class="hourLabel">9AM</h2>
-      <textarea class="taskInputArea">
-
-      </textarea>
-      <button class="saveBtn"></button>
+      <h2 class="hourLabel col-md-1">9AM</h2>
+      <textarea class="taskInputArea col-md-8"></textarea>
+      <button class="saveBtn col-md-1"></button>
+      <button class="doneBtn col-md-1"></button>
+      <button class="clearBtn col-md-1"></button>
     </div>
 
     <div id="hour-10am" class="oneHourSection">
-      <h2 class="hourLabel">10AM</h2>
-      <textarea class="taskInputArea">
-
-      </textarea>
-      <button class="saveBtn"></button>
+      <h2 class="hourLabel col-md-1">10AM</h2>
+      <textarea class="taskInputArea col-md-8"></textarea>
+      <button class="saveBtn col-md-1"></button>
+      <button class="doneBtn col-md-1"></button>
+      <button class="clearBtn col-md-1"></button>
     </div>
 
     <div id="hour-11am" class="oneHourSection">
-      <h2 class="hourLabel">11AM</h2>
-      <textarea class="taskInputArea">
-
-      </textarea>
-      <button class="saveBtn"></button>
+      <h2 class="hourLabel col-md-1">11AM</h2>
+      <textarea class="taskInputArea col-md-8"></textarea>
+      <button class="saveBtn col-md-1"></button>
+      <button class="doneBtn col-md-1"></button>
+      <button class="clearBtn col-md-1"></button>
     </div>
 
     <div id="hour-12pm" class="oneHourSection">
-      <h2 class="hourLabel">12PM</h2>
-      <textarea class="taskInputArea">
-
-      </textarea>
-      <button class="saveBtn"></button>
+      <h2 class="hourLabel col-md-1">12PM</h2>
+      <textarea class="taskInputArea col-md-8"></textarea>
+      <button class="saveBtn col-md-1"></button>
+      <button class="doneBtn col-md-1"></button>
+      <button class="clearBtn col-md-1"></button>
     </div>
 
     <div id="hour-1pm" class="oneHourSection">
-      <h2 class="hourLabel">1PM</h2>
-      <textarea class="taskInputArea">
-
-      </textarea>
-      <button class="saveBtn"></button>
+      <h2 class="hourLabel col-md-1">1PM</h2>
+      <textarea class="taskInputArea col-md-8"></textarea>
+      <button class="saveBtn col-md-1"></button>
+      <button class="doneBtn col-md-1"></button>
+      <button class="clearBtn col-md-1"></button>
     </div>
 
     <div id="hour-2pm" class="oneHourSection">
-      <h2 class="hourLabel">2PM</h2>
-      <textarea class="taskInputArea">
-
-      </textarea>
-      <button class="saveBtn"></button>
+      <h2 class="hourLabel col-md-1">2PM</h2>
+      <textarea class="taskInputArea col-md-8"></textarea>
+      <button class="saveBtn col-md-1"></button>
+      <button class="doneBtn col-md-1"></button>
+      <button class="clearBtn col-md-1"></button>
     </div>
 
     <div id="hour-3pm" class="oneHourSection">
-      <h2 class="hourLabel">3PM</h2>
-      <textarea class="taskInputArea">
-
-      </textarea>
-      <button class="saveBtn"></button>
+      <h2 class="hourLabel col-md-1">3PM</h2>
+      <textarea class="taskInputArea col-md-8"></textarea>
+      <button class="saveBtn col-md-1"></button>
+      <button class="doneBtn col-md-1"></button>
+      <button class="clearBtn col-md-1"></button>
     </div>
 
     <div id="hour-4pm" class="oneHourSection">
-      <h2 class="hourLabel">4PM</h2>
-      <textarea class="taskInputArea">
-
-      </textarea>
-      <button class="saveBtn"></button>
+      <h2 class="hourLabel col-md-1">4PM</h2>
+      <textarea class="taskInputArea col-md-8"></textarea>
+      <button class="saveBtn col-md-1"></button>
+      <button class="doneBtn col-md-1"></button>
+      <button class="clearBtn col-md-1"></button>
     </div>
 
     <div id="hour-5pm" class="oneHourSection">
-      <h2 class="hourLabel">5PM</h2>
-      <textarea class="taskInputArea">
-
-      </textarea>
-      <button class="saveBtn"></button>
+      <h2 class="hourLabel col-md-1">5PM</h2>
+      <textarea class="taskInputArea col-md-8"></textarea>
+      <button class="saveBtn col-md-1"></button>
+      <button class="doneBtn col-md-1"></button>
+      <button class="clearBtn col-md-1"></button>
     </div>
 
   </section>
