--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <body>
   <header class="jumbotron">
-    <button id="displayExtras" class="extrasBtn">Display Extras</button>
+    <button id="displayExtras" class="extrasBtn">Display Extra Features</button>
     <h1 class="display-3">Work Day Scheduler</h1>
     <p class="lead">A simple calendar app for scheduling your work day</p>
     <p id="currentDay" class="lead"></p>
@@ -23,7 +23,7 @@
 
 <!-- below section is for listing tasks that were not crossed off, and in "past" state of the updateHour function -->
 <section id="rollOverTasks hideExtras">
-  <textarea id="listOfRollOverTasks class="col-md-8 offset-md-3"></textarea>
+  <textarea id="listOfRollOverTasks" class="col-md-6 offset-md-3 hideExtras"></textarea>
 </section>
 
 
@@ -33,7 +33,7 @@
     <div id="hour-9am" class="oneHourSection">
       <h2 class="hourLabel col-md-1">9AM</h2>
       <textarea class="taskInputArea col-md-10"></textarea>
-      <button class="saveBtn col-md-1"></button>
+      <button class="saveBtn col-md-1"><i class="fa-regular fa-user"></i></button>
       <button class="doneBtn col-md-1 hideExtras"></button>
       <button class="clearBtn col-md-1 hideExtras"></button>
     </div>
@@ -41,7 +41,7 @@
     <div id="hour-10am" class="oneHourSection">
       <h2 class="hourLabel col-md-1">10AM</h2>
       <textarea class="taskInputArea col-md-10"></textarea>
-      <button class="saveBtn col-md-1"></button>
+      <button class="saveBtn col-md-1"><i class="fa-regular fa-user"></i></button>
       <button class="doneBtn col-md-1 hideExtras"></button>
       <button class="clearBtn col-md-1 hideExtras"></button>
     </div>
@@ -49,7 +49,7 @@
     <div id="hour-11am" class="oneHourSection">
       <h2 class="hourLabel col-md-1">11AM</h2>
       <textarea class="taskInputArea col-md-10"></textarea>
-      <button class="saveBtn col-md-1"></button>
+      <button class="saveBtn col-md-1"><i class="fa-regular fa-user"></i></button>
       <button class="doneBtn col-md-1 hideExtras"></button>
       <button class="clearBtn col-md-1 hideExtras"></button>
     </div>
@@ -57,7 +57,7 @@
     <div id="hour-12pm" class="oneHourSection">
       <h2 class="hourLabel col-md-1">12PM</h2>
       <textarea class="taskInputArea col-md-10"></textarea>
-      <button class="saveBtn col-md-1"></button>
+      <button class="saveBtn col-md-1"><i class="fa-regular fa-user"></i></button>
       <button class="doneBtn col-md-1 hideExtras"></button>
       <button class="clearBtn col-md-1 hideExtras"></button>
     </div>
@@ -65,7 +65,7 @@
     <div id="hour-1pm" class="oneHourSection">
       <h2 class="hourLabel col-md-1">1PM</h2>
       <textarea class="taskInputArea col-md-10"></textarea>
-      <button class="saveBtn col-md-1"></button>
+      <button class="saveBtn col-md-1"><i class="fa-regular fa-user"></i></button>
       <button class="doneBtn col-md-1 hideExtras"></button>
       <button class="clearBtn col-md-1 hideExtras"></button>
     </div>
@@ -73,7 +73,7 @@
     <div id="hour-2pm" class="oneHourSection">
       <h2 class="hourLabel col-md-1">2PM</h2>
       <textarea class="taskInputArea col-md-10"></textarea>
-      <button class="saveBtn col-md-1"></button>
+      <button class="saveBtn col-md-1"><i class="fa-regular fa-user"></i></button>
       <button class="doneBtn col-md-1 hideExtras"></button>
       <button class="clearBtn col-md-1 hideExtras"></button>
     </div>
@@ -81,7 +81,7 @@
     <div id="hour-3pm" class="oneHourSection">
       <h2 class="hourLabel col-md-1">3PM</h2>
       <textarea class="taskInputArea col-md-10"></textarea>
-      <button class="saveBtn col-md-1"></button>
+      <button class="saveBtn col-md-1"><i class="fa-regular fa-user"></i></button>
       <button class="doneBtn col-md-1 hideExtras"></button>
       <button class="clearBtn col-md-1 hideExtras"></button>
     </div>
@@ -89,7 +89,7 @@
     <div id="hour-4pm" class="oneHourSection">
       <h2 class="hourLabel col-md-1">4PM</h2>
       <textarea class="taskInputArea col-md-10"></textarea>
-      <button class="saveBtn col-md-1"></button>
+      <button class="saveBtn col-md-1"><i class="fa-regular fa-user"></i></button>
       <button class="doneBtn col-md-1 hideExtras"></button>
       <button class="clearBtn col-md-1 hideExtras"></button>
     </div>
@@ -97,7 +97,7 @@
     <div id="hour-5pm" class="oneHourSection">
       <h2 class="hourLabel col-md-1">5PM</h2>
       <textarea class="taskInputArea col-md-10"></textarea>
-      <button class="saveBtn col-md-1"></button>
+      <button class="saveBtn col-md-1"><i class="fa-regular fa-user"></i></button>
       <button class="doneBtn col-md-1 hideExtras"></button>
       <button class="clearBtn col-md-1 hideExtras"></button>
     </div>
