--- a/index.html
+++ b/index.html
@@ -5,20 +5,20 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
-    integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href='./assets/css/style.css'>
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" />
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" 
+      integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous" /> <!--allows save button to have the icon "save" optional-->
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet" /><link rel="stylesheet" href='./assets/css/style.css'>
   <title>Work Day Scheduler</title>
 </head>
 
 <body>
   <header class="jumbotron">
-    <button id="displayExtras" class="extrasBtn">Display Extra Features</button>
+    
     <h1 class="display-3">Work Day Scheduler</h1>
     <p class="lead">A simple calendar app for scheduling your work day</p>
     <p id="currentDay" class="lead"></p>
+    <button id="displayExtras" class="extrasBtn">Display Extra Features</button>
   </header>
 
 <!-- below section is for listing tasks that were not crossed off, and in "past" state of the updateHour function -->
@@ -33,7 +33,7 @@
     <div id="hour-9am" class="oneHourSection">
       <h2 class="hourLabel col-md-1">9AM</h2>
       <textarea class="taskInputArea col-md-10"></textarea>
-      <button class="saveBtn col-md-1"><i class="fa-regular fa-user"></i></button>
+      <button class="saveBtn col-md-1"><i class="fas fa-save"></i></button>
       <button class="doneBtn col-md-1 hideExtras"></button>
       <button class="clearBtn col-md-1 hideExtras"></button>
     </div>
@@ -41,7 +41,7 @@
     <div id="hour-10am" class="oneHourSection">
       <h2 class="hourLabel col-md-1">10AM</h2>
       <textarea class="taskInputArea col-md-10"></textarea>
-      <button class="saveBtn col-md-1"><i class="fa-regular fa-user"></i></button>
+      <button class="saveBtn col-md-1"><i class="fas fa-save"></i></button>
       <button class="doneBtn col-md-1 hideExtras"></button>
       <button class="clearBtn col-md-1 hideExtras"></button>
     </div>
@@ -49,7 +49,7 @@
     <div id="hour-11am" class="oneHourSection">
       <h2 class="hourLabel col-md-1">11AM</h2>
       <textarea class="taskInputArea col-md-10"></textarea>
-      <button class="saveBtn col-md-1"><i class="fa-regular fa-user"></i></button>
+      <button class="saveBtn col-md-1"><i class="fas fa-save"></i></button>
       <button class="doneBtn col-md-1 hideExtras"></button>
       <button class="clearBtn col-md-1 hideExtras"></button>
     </div>
@@ -57,7 +57,7 @@
     <div id="hour-12pm" class="oneHourSection">
       <h2 class="hourLabel col-md-1">12PM</h2>
       <textarea class="taskInputArea col-md-10"></textarea>
-      <button class="saveBtn col-md-1"><i class="fa-regular fa-user"></i></button>
+      <button class="saveBtn col-md-1"><i class="fas fa-save"></i></button>
       <button class="doneBtn col-md-1 hideExtras"></button>
       <button class="clearBtn col-md-1 hideExtras"></button>
     </div>
@@ -65,7 +65,7 @@
     <div id="hour-1pm" class="oneHourSection">
       <h2 class="hourLabel col-md-1">1PM</h2>
       <textarea class="taskInputArea col-md-10"></textarea>
-      <button class="saveBtn col-md-1"><i class="fa-regular fa-user"></i></button>
+      <button class="saveBtn col-md-1"><i class="fas fa-save"></i></button>
       <button class="doneBtn col-md-1 hideExtras"></button>
       <button class="clearBtn col-md-1 hideExtras"></button>
     </div>
@@ -73,7 +73,7 @@
     <div id="hour-2pm" class="oneHourSection">
       <h2 class="hourLabel col-md-1">2PM</h2>
       <textarea class="taskInputArea col-md-10"></textarea>
-      <button class="saveBtn col-md-1"><i class="fa-regular fa-user"></i></button>
+      <button class="saveBtn col-md-1"><i class="fas fa-save"></i></button>
       <button class="doneBtn col-md-1 hideExtras"></button>
       <button class="clearBtn col-md-1 hideExtras"></button>
     </div>
@@ -81,7 +81,7 @@
     <div id="hour-3pm" class="oneHourSection">
       <h2 class="hourLabel col-md-1">3PM</h2>
       <textarea class="taskInputArea col-md-10"></textarea>
-      <button class="saveBtn col-md-1"><i class="fa-regular fa-user"></i></button>
+      <button class="saveBtn col-md-1"><i class="fas fa-save"></i></button>
       <button class="doneBtn col-md-1 hideExtras"></button>
       <button class="clearBtn col-md-1 hideExtras"></button>
     </div>
@@ -89,7 +89,7 @@
     <div id="hour-4pm" class="oneHourSection">
       <h2 class="hourLabel col-md-1">4PM</h2>
       <textarea class="taskInputArea col-md-10"></textarea>
-      <button class="saveBtn col-md-1"><i class="fa-regular fa-user"></i></button>
+      <button class="saveBtn col-md-1"><i class="fas fa-save"></i></button>
       <button class="doneBtn col-md-1 hideExtras"></button>
       <button class="clearBtn col-md-1 hideExtras"></button>
     </div>
@@ -97,7 +97,7 @@
     <div id="hour-5pm" class="oneHourSection">
       <h2 class="hourLabel col-md-1">5PM</h2>
       <textarea class="taskInputArea col-md-10"></textarea>
-      <button class="saveBtn col-md-1"><i class="fa-regular fa-user"></i></button>
+      <button class="saveBtn col-md-1"><i class="fas fa-save"></i></button>
       <button class="doneBtn col-md-1 hideExtras"></button>
       <button class="clearBtn col-md-1 hideExtras"></button>
     </div>
@@ -121,9 +121,8 @@ will need to amend current hour blocks by adding a completed button as well as s
 -->
 </body>
 
-<script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
-
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.27.0/moment.min.js"></script>
 <script src="assets/js/script.js"></script>
 
 </html>
