the save buttons are functioning

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       <h2 class="hourLabel col-md-1">9AM</h2>
       <textarea class="taskInputArea col-md-10"></textarea>
       <button class="saveBtn col-md-1"><i class="fas fa-save"></i></button>
-      <button class="doneBtn col-md-1 hideExtras"></button>
+      <button class="doneBtn col-md-1 hideExtras"><i class="bi bi-bookmark-check"></i></button>
       <button class="clearBtn col-md-1 hideExtras"></button>
     </div>
 
