added array for hour blocks in attempt to have update feature work, still needs work

--- a/index.html
+++ b/index.html
@@ -30,73 +30,73 @@
   <section class="fullDayContainer">
 
     <!-- Timeblocks go here -->
-    <div id="hour-9am" class="oneHourSection">
+    <div class="oneHourSection">
       <h2 class="hourLabel col-md-1">9AM</h2>
-      <textarea class="taskInputArea col-md-10"></textarea>
+      <textarea class="taskInputArea col-md-10" id="hour-9am" data-hour="9"></textarea>
       <button class="saveBtn col-md-1"><i class="fas fa-save"></i></button>
-      <button class="doneBtn col-md-1 hideExtras"><i class="bi bi-bookmark-check"></i></button>
+      <button class="doneBtn col-md-1 hideExtras"></button>
       <button class="clearBtn col-md-1 hideExtras"></button>
     </div>
 
-    <div id="hour-10am" class="oneHourSection">
+    <div class="oneHourSection">
       <h2 class="hourLabel col-md-1">10AM</h2>
-      <textarea class="taskInputArea col-md-10"></textarea>
+      <textarea class="taskInputArea col-md-10" id="hour-10am" data-hour="10"></textarea>
       <button class="saveBtn col-md-1"><i class="fas fa-save"></i></button>
       <button class="doneBtn col-md-1 hideExtras"></button>
       <button class="clearBtn col-md-1 hideExtras"></button>
     </div>
 
-    <div id="hour-11am" class="oneHourSection">
+    <div class="oneHourSection">
       <h2 class="hourLabel col-md-1">11AM</h2>
-      <textarea class="taskInputArea col-md-10"></textarea>
+      <textarea class="taskInputArea col-md-10" id="hour-11am" data-hour="11"></textarea>
       <button class="saveBtn col-md-1"><i class="fas fa-save"></i></button>
       <button class="doneBtn col-md-1 hideExtras"></button>
       <button class="clearBtn col-md-1 hideExtras"></button>
     </div>
 
-    <div id="hour-12pm" class="oneHourSection">
+    <div class="oneHourSection">
       <h2 class="hourLabel col-md-1">12PM</h2>
-      <textarea class="taskInputArea col-md-10"></textarea>
+      <textarea class="taskInputArea col-md-10" id="hour-12pm" data-hour="12"></textarea>
       <button class="saveBtn col-md-1"><i class="fas fa-save"></i></button>
       <button class="doneBtn col-md-1 hideExtras"></button>
       <button class="clearBtn col-md-1 hideExtras"></button>
     </div>
 
-    <div id="hour-1pm" class="oneHourSection">
+    <div class="oneHourSection">
       <h2 class="hourLabel col-md-1">1PM</h2>
-      <textarea class="taskInputArea col-md-10"></textarea>
+      <textarea class="taskInputArea col-md-10" id="hour-1pm" data-hour="13"></textarea>
       <button class="saveBtn col-md-1"><i class="fas fa-save"></i></button>
       <button class="doneBtn col-md-1 hideExtras"></button>
       <button class="clearBtn col-md-1 hideExtras"></button>
     </div>
 
-    <div id="hour-2pm" class="oneHourSection">
+    <div class="oneHourSection">
       <h2 class="hourLabel col-md-1">2PM</h2>
-      <textarea class="taskInputArea col-md-10"></textarea>
+      <textarea class="taskInputArea col-md-10" id="hour-2pm" data-hour="14"></textarea>
       <button class="saveBtn col-md-1"><i class="fas fa-save"></i></button>
       <button class="doneBtn col-md-1 hideExtras"></button>
       <button class="clearBtn col-md-1 hideExtras"></button>
     </div>
 
-    <div id="hour-3pm" class="oneHourSection">
+    <div class="oneHourSection">
       <h2 class="hourLabel col-md-1">3PM</h2>
-      <textarea class="taskInputArea col-md-10"></textarea>
+      <textarea class="taskInputArea col-md-10" id="hour-3pm" data-hour="15"></textarea>
       <button class="saveBtn col-md-1"><i class="fas fa-save"></i></button>
       <button class="doneBtn col-md-1 hideExtras"></button>
       <button class="clearBtn col-md-1 hideExtras"></button>
     </div>
 
-    <div id="hour-4pm" class="oneHourSection">
+    <div class="oneHourSection">
       <h2 class="hourLabel col-md-1">4PM</h2>
-      <textarea class="taskInputArea col-md-10"></textarea>
+      <textarea class="taskInputArea col-md-10" id="hour-4pm" data-hour="16"></textarea>
       <button class="saveBtn col-md-1"><i class="fas fa-save"></i></button>
       <button class="doneBtn col-md-1 hideExtras"></button>
       <button class="clearBtn col-md-1 hideExtras"></button>
     </div>
 
-    <div id="hour-5pm" class="oneHourSection">
+    <div class="oneHourSection">
       <h2 class="hourLabel col-md-1">5PM</h2>
-      <textarea class="taskInputArea col-md-10"></textarea>
+      <textarea class="taskInputArea col-md-10" id="hour-5pm" data-hour="17"></textarea>
       <button class="saveBtn col-md-1"><i class="fas fa-save"></i></button>
       <button class="doneBtn col-md-1 hideExtras"></button>
       <button class="clearBtn col-md-1 hideExtras"></button>
