--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <h1 class="display-3">Work Day Scheduler</h1>
     <p class="lead">A simple calendar app for scheduling your work day</p>
     <p id="currentDay" class="lead"></p>
-    <button id="displayExtras" class="extrasBtn">Display Extra Features</button>
+    <!--<button id="displayExtras" class="extrasBtn">Display Extra Features</button> -->
   </header>
 
 <!-- below section is for listing tasks that were not crossed off, and in "past" state of the updateHour function -->
@@ -30,7 +30,7 @@
   <section class="fullDayContainer">
 
     <!-- Timeblocks go here -->
-    <div class="oneHourSection">
+    <div class="oneHourSection" id="hour9">
       <h2 class="hourLabel col-md-1">9AM</h2>
       <textarea class="taskInputArea col-md-10" id="hour-9am" data-hour="9"></textarea>
       <button class="saveBtn col-md-1"><i class="fas fa-save"></i></button>
@@ -38,7 +38,7 @@
       <button class="clearBtn col-md-1 hideExtras"></button>
     </div>
 
-    <div class="oneHourSection">
+    <div class="oneHourSection" id="hour10">
       <h2 class="hourLabel col-md-1">10AM</h2>
       <textarea class="taskInputArea col-md-10" id="hour-10am" data-hour="10"></textarea>
       <button class="saveBtn col-md-1"><i class="fas fa-save"></i></button>
@@ -46,7 +46,7 @@
       <button class="clearBtn col-md-1 hideExtras"></button>
     </div>
 
-    <div class="oneHourSection">
+    <div class="oneHourSection" id="hour11">
       <h2 class="hourLabel col-md-1">11AM</h2>
       <textarea class="taskInputArea col-md-10" id="hour-11am" data-hour="11"></textarea>
       <button class="saveBtn col-md-1"><i class="fas fa-save"></i></button>
@@ -54,7 +54,7 @@
       <button class="clearBtn col-md-1 hideExtras"></button>
     </div>
 
-    <div class="oneHourSection">
+    <div class="oneHourSection" id="hour12">
       <h2 class="hourLabel col-md-1">12PM</h2>
       <textarea class="taskInputArea col-md-10" id="hour-12pm" data-hour="12"></textarea>
       <button class="saveBtn col-md-1"><i class="fas fa-save"></i></button>
@@ -62,7 +62,7 @@
       <button class="clearBtn col-md-1 hideExtras"></button>
     </div>
 
-    <div class="oneHourSection">
+    <div class="oneHourSection" id="hour13">
       <h2 class="hourLabel col-md-1">1PM</h2>
       <textarea class="taskInputArea col-md-10" id="hour-1pm" data-hour="13"></textarea>
       <button class="saveBtn col-md-1"><i class="fas fa-save"></i></button>
@@ -70,7 +70,7 @@
       <button class="clearBtn col-md-1 hideExtras"></button>
     </div>
 
-    <div class="oneHourSection">
+    <div class="oneHourSection" id="hour14">
       <h2 class="hourLabel col-md-1">2PM</h2>
       <textarea class="taskInputArea col-md-10" id="hour-2pm" data-hour="14"></textarea>
       <button class="saveBtn col-md-1"><i class="fas fa-save"></i></button>
@@ -78,7 +78,7 @@
       <button class="clearBtn col-md-1 hideExtras"></button>
     </div>
 
-    <div class="oneHourSection">
+    <div class="oneHourSection" id="hour15">
       <h2 class="hourLabel col-md-1">3PM</h2>
       <textarea class="taskInputArea col-md-10" id="hour-3pm" data-hour="15"></textarea>
       <button class="saveBtn col-md-1"><i class="fas fa-save"></i></button>
@@ -86,7 +86,7 @@
       <button class="clearBtn col-md-1 hideExtras"></button>
     </div>
 
-    <div class="oneHourSection">
+    <div class="oneHourSection" id="hour16">
       <h2 class="hourLabel col-md-1">4PM</h2>
       <textarea class="taskInputArea col-md-10" id="hour-4pm" data-hour="16"></textarea>
       <button class="saveBtn col-md-1"><i class="fas fa-save"></i></button>
@@ -94,7 +94,7 @@
       <button class="clearBtn col-md-1 hideExtras"></button>
     </div>
 
-    <div class="oneHourSection">
+    <div class="oneHourSection" id="hour17">
       <h2 class="hourLabel col-md-1">5PM</h2>
       <textarea class="taskInputArea col-md-10" id="hour-5pm" data-hour="17"></textarea>
       <button class="saveBtn col-md-1"><i class="fas fa-save"></i></button>
