all features seem to function properly, I will try to make a separate branch for the extra stuff to avoid confusion and breaking the working code

--- a/index.html
+++ b/index.html
@@ -18,12 +18,13 @@
     <h1 class="display-3">Work Day Scheduler</h1>
     <p class="lead">A simple calendar app for scheduling your work day</p>
     <p id="currentDay" class="lead"></p>
-    <!--<button id="displayExtras" class="extrasBtn">Display Extra Features</button> -->
+    <!-- <button id="displayExtras" class="extrasBtn">Display Extra Features</button> -->
+    <!-- <button id="return" class="returnBtn hideExtras">Hide Extra Features</button> -->
   </header>
 
 <!-- below section is for listing tasks that were not crossed off, and in "past" state of the updateHour function -->
-<section id="rollOverTasks hideExtras">
-  <textarea id="listOfRollOverTasks" class="col-md-6 offset-md-3 hideExtras"></textarea>
+<section id="rollOverTasks" class="hideExtras">
+  <textarea id="listOfRollOverTasks" class="col-md-6 offset-md-3"></textarea>
 </section>
 
 
@@ -33,73 +34,73 @@
     <div class="oneHourSection" id="hour9">
       <h2 class="hourLabel col-md-1">9AM</h2>
       <textarea class="taskInputArea col-md-10" id="hour-9am" data-hour="9"></textarea>
-      <button class="saveBtn col-md-1"><i class="fas fa-save"></i></button>
-      <button class="doneBtn col-md-1 hideExtras"></button>
-      <button class="clearBtn col-md-1 hideExtras"></button>
+      <button class="saveBtn col-md-1" id="saveBtn9"><i class="fas fa-save"></i></button>
+      <button class="doneBtn col-md-1 hideExtras" id="doneBtn9"></button>
+      <button class="clearBtn col-md-1 hideExtras" id="clearBtn9"></button>
     </div>
 
     <div class="oneHourSection" id="hour10">
       <h2 class="hourLabel col-md-1">10AM</h2>
       <textarea class="taskInputArea col-md-10" id="hour-10am" data-hour="10"></textarea>
-      <button class="saveBtn col-md-1"><i class="fas fa-save"></i></button>
-      <button class="doneBtn col-md-1 hideExtras"></button>
-      <button class="clearBtn col-md-1 hideExtras"></button>
+      <button class="saveBtn col-md-1" id="saveBtn10"><i class="fas fa-save"></i></button>
+      <button class="doneBtn col-md-1 hideExtras" id="doneBtn10"></button>
+      <button class="clearBtn col-md-1 hideExtras" id="clearBtn10"></button>
     </div>
 
     <div class="oneHourSection" id="hour11">
       <h2 class="hourLabel col-md-1">11AM</h2>
       <textarea class="taskInputArea col-md-10" id="hour-11am" data-hour="11"></textarea>
-      <button class="saveBtn col-md-1"><i class="fas fa-save"></i></button>
-      <button class="doneBtn col-md-1 hideExtras"></button>
-      <button class="clearBtn col-md-1 hideExtras"></button>
+      <button class="saveBtn col-md-1" id="saveBtn11"><i class="fas fa-save"></i></button>
+      <button class="doneBtn col-md-1 hideExtras" id="doneBtn11"></button>
+      <button class="clearBtn col-md-1 hideExtras" id="clearBtn11"></button>
     </div>
 
     <div class="oneHourSection" id="hour12">
       <h2 class="hourLabel col-md-1">12PM</h2>
       <textarea class="taskInputArea col-md-10" id="hour-12pm" data-hour="12"></textarea>
-      <button class="saveBtn col-md-1"><i class="fas fa-save"></i></button>
-      <button class="doneBtn col-md-1 hideExtras"></button>
-      <button class="clearBtn col-md-1 hideExtras"></button>
+      <button class="saveBtn col-md-1" id="saveBtn12"><i class="fas fa-save"></i></button>
+      <button class="doneBtn col-md-1 hideExtras" id="doneBtn12"></button>
+      <button class="clearBtn col-md-1 hideExtras" id="clearBtn12"></button>
     </div>
 
     <div class="oneHourSection" id="hour13">
       <h2 class="hourLabel col-md-1">1PM</h2>
       <textarea class="taskInputArea col-md-10" id="hour-1pm" data-hour="13"></textarea>
-      <button class="saveBtn col-md-1"><i class="fas fa-save"></i></button>
-      <button class="doneBtn col-md-1 hideExtras"></button>
-      <button class="clearBtn col-md-1 hideExtras"></button>
+      <button class="saveBtn col-md-1" id="saveBtn13"><i class="fas fa-save"></i></button>
+      <button class="doneBtn col-md-1 hideExtras" id="doneBtn13"></button>
+      <button class="clearBtn col-md-1 hideExtras" id="clearBtn13"></button>
     </div>
 
     <div class="oneHourSection" id="hour14">
       <h2 class="hourLabel col-md-1">2PM</h2>
       <textarea class="taskInputArea col-md-10" id="hour-2pm" data-hour="14"></textarea>
-      <button class="saveBtn col-md-1"><i class="fas fa-save"></i></button>
-      <button class="doneBtn col-md-1 hideExtras"></button>
-      <button class="clearBtn col-md-1 hideExtras"></button>
+      <button class="saveBtn col-md-1" id="saveBtn14"><i class="fas fa-save"></i></button>
+      <button class="doneBtn col-md-1 hideExtras" id="doneBtn14"></button>
+      <button class="clearBtn col-md-1 hideExtras" id="clearBtn14"></button>
     </div>
 
     <div class="oneHourSection" id="hour15">
       <h2 class="hourLabel col-md-1">3PM</h2>
       <textarea class="taskInputArea col-md-10" id="hour-3pm" data-hour="15"></textarea>
-      <button class="saveBtn col-md-1"><i class="fas fa-save"></i></button>
-      <button class="doneBtn col-md-1 hideExtras"></button>
-      <button class="clearBtn col-md-1 hideExtras"></button>
+      <button class="saveBtn col-md-1" id="saveBtn15"><i class="fas fa-save"></i></button>
+      <button class="doneBtn col-md-1 hideExtras" id="doneBtn15"></button>
+      <button class="clearBtn col-md-1 hideExtras" id="clearBtn15"></button>
     </div>
 
     <div class="oneHourSection" id="hour16">
       <h2 class="hourLabel col-md-1">4PM</h2>
       <textarea class="taskInputArea col-md-10" id="hour-4pm" data-hour="16"></textarea>
-      <button class="saveBtn col-md-1"><i class="fas fa-save"></i></button>
-      <button class="doneBtn col-md-1 hideExtras"></button>
-      <button class="clearBtn col-md-1 hideExtras"></button>
+      <button class="saveBtn col-md-1" id="saveBtn16"><i class="fas fa-save"></i></button>
+      <button class="doneBtn col-md-1 hideExtras" id="doneBtn16"></button>
+      <button class="clearBtn col-md-1 hideExtras" id="clearBtn16"></button>
     </div>
 
     <div class="oneHourSection" id="hour17">
       <h2 class="hourLabel col-md-1">5PM</h2>
       <textarea class="taskInputArea col-md-10" id="hour-5pm" data-hour="17"></textarea>
-      <button class="saveBtn col-md-1"><i class="fas fa-save"></i></button>
-      <button class="doneBtn col-md-1 hideExtras"></button>
-      <button class="clearBtn col-md-1 hideExtras"></button>
+      <button class="saveBtn col-md-1" id="saveBtn17"><i class="fas fa-save"></i></button>
+      <button class="doneBtn col-md-1 hideExtras" id="doneBtn17"></button>
+      <button class="clearBtn col-md-1 hideExtras" id="clearBtn17"></button>
     </div>
 
   </section>
